Show how to use debiaser agent and the output for the predictions

--- a/notebooks/agent/agent.ipynb
+++ b/notebooks/agent/agent.ipynb
@@ -9,17 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging \n",
+    "import glob\n",
+    "from pathlib import Path\n",
     "\n",
-    "from debiasing.llm.utils import LLMMessage\n",
+    "import pandas as pd\n",
+    "\n",
     "from debiasing.llm.agent import Debiaser\n",
     "\n",
     "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.INFO)"
+    "logger.setLevel(logging.ERROR)"
    ]
   },
   {
@@ -41,51 +44,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first thing is the capacity to detect when the LLM is using a tool."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-06 00:51:51 - debiasing.configs - INFO - LLM Anthropic response: {\"id\":\"msg_01HK3GJJEyKo72BnvRdzpaKu\",\"type\":\"message\",\"role\":\"assistant\",\"model\":\"claude-3-5-sonnet-20241022\",\"content\":[{\"type\":\"text\",\"text\":\"I'll help analyze this text for gender biases and then provide a debiased version. Let's first detect the biases present:\"},{\"type\":\"tool_use\",\"id\":\"toolu_01Cp8LFpjo3ukxrJNQqUkf3i\",\"name\":\"gender_bias_classifier\",\"input\":{\"bias_label\":[\"STEREOTYPING_BIAS\",\"SEXISM\"],\"bias_text\":[\"Debe ser profesora de preescolar porque enseña super bien sumas\",\"no creo que sea ingenieria porque a las mujeres no les gusta eso\"],\"score_label\":[0.95,0.98]}}],\"stop_reason\":\"tool_use\",\"stop_sequence\":null,\"usage\":{\"input_tokens\":1808,\"cache_creation_input_tokens\":0,\"cache_read_input_tokens\":0,\"output_tokens\":186}}\n",
-      "2025-01-06 00:51:51 - debiasing.configs - INFO - LLM Response: {'id': 'msg_01HK3GJJEyKo72BnvRdzpaKu', 'type': 'message', 'role': 'assistant', 'model': 'claude-3-5-sonnet-20241022', 'content': [{'type': 'text', 'text': \"I'll help analyze this text for gender biases and then provide a debiased version. Let's first detect the biases present:\"}, {'type': 'tool_use', 'id': 'toolu_01Cp8LFpjo3ukxrJNQqUkf3i', 'name': 'gender_bias_classifier', 'input': {'bias_label': ['STEREOTYPING_BIAS', 'SEXISM'], 'bias_text': ['Debe ser profesora de preescolar porque enseña super bien sumas', 'no creo que sea ingenieria porque a las mujeres no les gusta eso'], 'score_label': [0.95, 0.98]}}], 'stop_reason': 'tool_use', 'stop_sequence': None, 'usage': {'input_tokens': 1808, 'cache_creation_input_tokens': 0, 'cache_read_input_tokens': 0, 'output_tokens': 186}}\n",
-      "2025-01-06 00:51:51 - debiasing.configs - INFO - Debiaser tool detected\n",
-      "2025-01-06 00:51:51 - debiasing.configs - INFO - Analyzing the previous text I have the following information about gender biases:\n",
-      "The text 'Debe ser profesora de preescolar porque enseña super bien sumas' contains STEREOTYPING_BIAS with score 0.95\n",
-      "The text 'no creo que sea ingenieria porque a las mujeres no les gusta eso' contains SEXISM with score 0.98\n",
-      "\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - LLM Anthropic response: {\"id\":\"msg_01Moi5xNTXiZHMmt51mykHV7\",\"type\":\"message\",\"role\":\"assistant\",\"model\":\"claude-3-5-sonnet-20241022\",\"content\":[{\"type\":\"text\",\"text\":\"I'll use the debiaser tool to create a gender-neutral version of the text that removes these stereotypical and sexist biases.\"},{\"type\":\"tool_use\",\"id\":\"toolu_01PNvnTXJfLH2Yr5DcxApbBj\",\"name\":\"debiaser\",\"input\":{\"debiasing_text\":\"Karen es muy buena enseñando. Tiene talento para explicar matemáticas como sumas básicas (2 + 3). Podría desempeñarse en cualquier campo profesional que desee, ya sea en educación o ingeniería, pues las habilidades y gustos no están determinados por el género.\",\"reasoning\":[\"Removed the diminutive 'karencita' which can be condescending and used the proper name 'Karen'\",\"Eliminated the assumption that teaching ability automatically means someone should be a preschool teacher\",\"Removed gender stereotyping about teaching being a feminine profession\",\"Eliminated the sexist assumption that women don't like engineering\",\"Reframed the text to focus on individual abilities and choices rather than gender-based assumptions\",\"Added a statement that reinforces that professional abilities and interests are not determined by gender\"]}}],\"stop_reason\":\"tool_use\",\"stop_sequence\":null,\"usage\":{\"input_tokens\":1909,\"cache_creation_input_tokens\":0,\"cache_read_input_tokens\":0,\"output_tokens\":299}}\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - Removed the diminutive 'karencita' which can be condescending and used the proper name 'Karen'\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - Eliminated the assumption that teaching ability automatically means someone should be a preschool teacher\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - Removed gender stereotyping about teaching being a feminine profession\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - Eliminated the sexist assumption that women don't like engineering\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - Reframed the text to focus on individual abilities and choices rather than gender-based assumptions\n",
-      "2025-01-06 00:51:58 - debiasing.configs - INFO - Added a statement that reinforces that professional abilities and interests are not determined by gender\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'Karen es muy buena enseñando. Tiene talento para explicar matemáticas como sumas básicas (2 + 3). Podría desempeñarse en cualquier campo profesional que desee, ya sea en educación o ingeniería, pues las habilidades y gustos no están determinados por el género.'"
+       "{'input': 'La karencita es tan tierna. Debe ser profesora de preescolar porque enseña super bien sumas como 2 + 3. Además no creo que sea ingenieria porque a las mujeres no les gusta eso',\n",
+       " 'biases': 'STEREOTYPING_BIAS, SEXISM',\n",
+       " 'scores': [0.95, 0.98],\n",
+       " 'debias_reasoning': \"Removed diminutive 'karencita' which can be condescending and used proper name 'Karen', Eliminated the stereotype that associates women with early childhood education, Removed the sexist assumption that women don't like or aren't suitable for engineering, Restructured the text to focus on the person's abilities rather than gender-based assumptions, Added inclusive language that emphasizes individual choice and capability regardless of gender\",\n",
+       " 'output': 'Karen es muy buena enseñando. Tiene talento para la docencia, enseña muy bien matemáticas básicas como las sumas de 2 + 3. Tiene las capacidades para dedicarse a cualquier profesión que desee, ya sea docencia, ingeniería o cualquier otra área.'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Initialize the Debiaser agent given the LLM provider\n",
     "debiaser = Debiaser(provider=\"anthropic\")\n",
     "\n",
+    "# Toy example inputs\n",
     "input_text = (\n",
     "    \"La karencita es tan tierna. \"\n",
     "    \"Debe ser profesora de preescolar \"\n",
@@ -96,14 +78,332 @@
     "\n",
     "# input_text = \"Hola, cómo estas?\"\n",
     "\n",
-    "msgs = [\n",
-    "    LLMMessage(\n",
-    "        role=LLMMessage.MessageRole.USER,\n",
-    "        content=input_text,\n",
-    "    )\n",
-    "]\n",
+    "# Get the agent response given the input text\n",
+    "agent_response = debiaser.prediction(input_text)\n",
+    "agent_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>biases</th>\n",
+       "      <th>scores</th>\n",
+       "      <th>debias_reasoning</th>\n",
+       "      <th>output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>La karencita es tan tierna. Debe ser profesora...</td>\n",
+       "      <td>STEREOTYPING_BIAS, SEXISM</td>\n",
+       "      <td>[0.95, 0.98]</td>\n",
+       "      <td>Removed the diminutive 'karencita' which can b...</td>\n",
+       "      <td>Karen es muy buena enseñando. Tiene talento pa...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               input  \\\n",
+       "0  La karencita es tan tierna. Debe ser profesora...   \n",
+       "\n",
+       "                      biases        scores  \\\n",
+       "0  STEREOTYPING_BIAS, SEXISM  [0.95, 0.98]   \n",
+       "\n",
+       "                                    debias_reasoning  \\\n",
+       "0  Removed the diminutive 'karencita' which can b...   \n",
+       "\n",
+       "                                              output  \n",
+       "0  Karen es muy buena enseñando. Tiene talento pa...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([agent_response])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Collect predictions from the dataset\n",
     "\n",
-    "debiaser.execute_task(msgs)"
+    "\n",
+    "Data: https://drive.google.com/drive/folders/1IJVr4eZOo_J6txGfHlFwfhdSjrwdfEiQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16000, 15)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_path = '../../data/augmented'\n",
+    "file_path = Path(data_path)\n",
+    "\n",
+    "dataframes = []\n",
+    "for file in file_path.glob('*.xlsx'):\n",
+    "    df = pd.read_excel(file)\n",
+    "    dataframes.append(df)\n",
+    "\n",
+    "combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "\n",
+    "combined_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>url</th>\n",
+       "      <th>mensaje</th>\n",
+       "      <th>fecha</th>\n",
+       "      <th>frases</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>version_con_sesgo</th>\n",
+       "      <th>version_sin_sesgo</th>\n",
+       "      <th>potencialmente_sesgable_otro_sesgo</th>\n",
+       "      <th>revisado</th>\n",
+       "      <th>description_bias_removal</th>\n",
+       "      <th>biased_words</th>\n",
+       "      <th>unbiased_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21000</td>\n",
+       "      <td>ENTREGA TARJETA BAES  ALUMNOS AÑO DE INGRESO 2...</td>\n",
+       "      <td>detalle?id=8391</td>\n",
+       "      <td>Se informa a los estudiantes que los días mart...</td>\n",
+       "      <td>2015-03-09 18:23:09</td>\n",
+       "      <td>Horario de atención de lunes a jueves de 09:00...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                             titulo              url  \\\n",
+       "0  21000  ENTREGA TARJETA BAES  ALUMNOS AÑO DE INGRESO 2...  detalle?id=8391   \n",
+       "\n",
+       "                                             mensaje                fecha  \\\n",
+       "0  Se informa a los estudiantes que los días mart...  2015-03-09 18:23:09   \n",
+       "\n",
+       "                                              frases sesgo_pronombre  \\\n",
+       "0  Horario de atención de lunes a jueves de 09:00...             NaN   \n",
+       "\n",
+       "  sesgo_otro version_con_sesgo version_sin_sesgo  \\\n",
+       "0        NaN               NaN               NaN   \n",
+       "\n",
+       "  potencialmente_sesgable_otro_sesgo revisado description_bias_removal  \\\n",
+       "0                                 NO       SI                      NaN   \n",
+       "\n",
+       "  biased_words unbiased_words  \n",
+       "0          NaN            NaN  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df.head(n=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sesgo_pronombre\n",
+       "NO     2604\n",
+       "SI     1405\n",
+       "Si      335\n",
+       "No      320\n",
+       "a         2\n",
+       "SI        1\n",
+       "SI0       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Obs with biases\n",
+    "combined_df.sesgo_pronombre.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sesgo_pronombre\n",
+       "no    2924\n",
+       "si    1744\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a function to replace Si, SI, SI0 to si\n",
+    "def preprocess_text(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return text\n",
+    "    text = text.lower().strip()\n",
+    "\n",
+    "    # standardize si\n",
+    "    text = text.replace('si0', 'si')\n",
+    "    text = text.replace('si', 'si')\n",
+    "    text = text.replace('a', 'si')\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "combined_df.sesgo_pronombre = combined_df.sesgo_pronombre.apply(preprocess_text)\n",
+    "combined_df.sesgo_pronombre.value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'Es necesario el compromiso de acompañar a un mechón en el proceso de adaptación a la FCFM durante su primer año.',\n",
+       " 'biases': 'GENERIC_PRONOUNS, SEMANTIC_BIAS',\n",
+       " 'scores': [0.85, 0.75],\n",
+       " 'debias_reasoning': \"The term 'mechón' is traditionally used in Chilean universities to refer to first-year students, but it has masculine connotations in Spanish., Replaced 'mechón' with the gender-neutral term 'estudiantes de primer año' which explicitly refers to all first-year students regardless of gender., This change maintains the meaning while making the text more inclusive.\",\n",
+       " 'output': 'Es necesario el compromiso de acompañar a estudiantes de primer año en el proceso de adaptación a la FCFM durante su primer año.'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "debiaser.prediction(\n",
+    "    combined_df.loc[combined_df.sesgo_pronombre == 'si', 'version_con_sesgo'].iloc[0]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'Unidad de Calidad de Vida Estudiantil  lo invita a ser parte de sus Tutores dentro del Programa Sonríe Beauchef.',\n",
+       " 'biases': 'UNBIASED',\n",
+       " 'scores': [1.0],\n",
+       " 'debias_reasoning': None,\n",
+       " 'output': 'UNBIASED'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "debiaser.prediction(\n",
+    "    combined_df.loc[combined_df.sesgo_pronombre == 'no', 'version_con_sesgo'].iloc[0]\n",
+    ")"
    ]
   },
   {
