Add AgentPrediction pydantic model for Debiaser.prediction output

--- a/notebooks/agent/agent.ipynb
+++ b/notebooks/agent/agent.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging \n",
-    "import glob\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "\n",
     "from debiasing.llm.agent import Debiaser\n",
+    "from debiasing.llm.models import LLMMessage\n",
     "\n",
     "logger = logging.getLogger()\n",
     "logger.setLevel(logging.ERROR)"
@@ -45,20 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input': 'La karencita es tan tierna. Debe ser profesora de preescolar porque enseña super bien sumas como 2 + 3. Además no creo que sea ingenieria porque a las mujeres no les gusta eso',\n",
-       " 'biases': 'STEREOTYPING_BIAS, SEXISM',\n",
-       " 'scores': [0.95, 0.98],\n",
-       " 'debias_reasoning': \"Removed diminutive 'karencita' which can be condescending and used proper name 'Karen', Eliminated the stereotype that associates women with early childhood education, Removed the sexist assumption that women don't like or aren't suitable for engineering, Restructured the text to focus on the person's abilities rather than gender-based assumptions, Added inclusive language that emphasizes individual choice and capability regardless of gender\",\n",
-       " 'output': 'Karen es muy buena enseñando. Tiene talento para la docencia, enseña muy bien matemáticas básicas como las sumas de 2 + 3. Tiene las capacidades para dedicarse a cualquier profesión que desee, ya sea docencia, ingeniería o cualquier otra área.'}"
+       "AgentResponse(tool_activations=[ToolActivation(tool_name='gender_bias_classifier', tool_results={'bias_labels': ['STEREOTYPING_BIAS', 'SEXISM'], 'bias_texts': ['Debe ser profesora de preescolar porque enseña super bien sumas', 'no creo que sea ingenieria porque a las mujeres no les gusta eso'], 'scores': [0.95, 0.98]}, step_id=1), ToolActivation(tool_name='debiaser', tool_results={'debiasing_text': 'Karen es una persona con talento para enseñar. Tiene habilidad para explicar conceptos matemáticos como sumas básicas del tipo 2 + 3. Podría desempeñarse en cualquier campo profesional según sus intereses y capacidades.', 'reasoning': [\"Removed diminutive 'karencita' which can be condescending and replaced with neutral name 'Karen'\", 'Eliminated the stereotype that teaching preschool is exclusively for women or that women are naturally nurturing', \"Removed the sexist assumption that women don't like or aren't suitable for engineering\", \"Focused on the person's abilities and skills rather than gender stereotypes\", 'Emphasized that career choices should be based on individual interests and capabilities, not gender']}, step_id=2)], messages=[LLMMessage(role=<MessageRole.USER: 'user'>, content='La karencita es tan tierna. Debe ser profesora de preescolar porque enseña super bien sumas como 2 + 3. Además no creo que sea ingenieria porque a las mujeres no les gusta eso')], llm_responses=[{'id': 'msg_01LVtqkq3KkWbq4FM3zZQug5', 'type': 'message', 'role': 'assistant', 'model': 'claude-3-5-sonnet-20241022', 'content': [{'type': 'text', 'text': \"I'll help analyze this text for gender biases and then provide a debiased version. Let's first identify any gender biases present in the text.\"}, {'type': 'tool_use', 'id': 'toolu_01PgeXiyRRMAFTWs3kHRj2DY', 'name': 'gender_bias_classifier', 'input': {'bias_label': ['STEREOTYPING_BIAS', 'SEXISM'], 'bias_text': ['Debe ser profesora de preescolar porque enseña super bien sumas', 'no creo que sea ingenieria porque a las mujeres no les gusta eso'], 'score_label': [0.95, 0.98]}}], 'stop_reason': 'tool_use', 'stop_sequence': None, 'usage': {'input_tokens': 1808, 'cache_creation_input_tokens': 0, 'cache_read_input_tokens': 0, 'output_tokens': 190}}, {'id': 'msg_01C916aBbbqSbWniybjNvPXb', 'type': 'message', 'role': 'assistant', 'model': 'claude-3-5-sonnet-20241022', 'content': [{'type': 'text', 'text': \"I'll use the debiaser tool to neutralize the gender biases found in the text:\"}, {'type': 'tool_use', 'id': 'toolu_01DmskqGrMaLak4gqGL1Eo64', 'name': 'debiaser', 'input': {'debiasing_text': 'Karen es una persona con talento para enseñar. Tiene habilidad para explicar conceptos matemáticos como sumas básicas del tipo 2 + 3. Podría desempeñarse en cualquier campo profesional según sus intereses y capacidades.', 'reasoning': [\"Removed diminutive 'karencita' which can be condescending and replaced with neutral name 'Karen'\", 'Eliminated the stereotype that teaching preschool is exclusively for women or that women are naturally nurturing', \"Removed the sexist assumption that women don't like or aren't suitable for engineering\", \"Focused on the person's abilities and skills rather than gender stereotypes\", 'Emphasized that career choices should be based on individual interests and capabilities, not gender']}}], 'stop_reason': 'tool_use', 'stop_sequence': None, 'usage': {'input_tokens': 1909, 'cache_creation_input_tokens': 0, 'cache_read_input_tokens': 0, 'output_tokens': 257}}], response='Karen es una persona con talento para enseñar. Tiene habilidad para explicar conceptos matemáticos como sumas básicas del tipo 2 + 3. Podría desempeñarse en cualquier campo profesional según sus intereses y capacidades.')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,14 +74,49 @@
     "\n",
     "# input_text = \"Hola, cómo estas?\"\n",
     "\n",
+    "# Obtain the agent response given the input text, includes the LLM responses summoned by the\n",
+    "# debiaser, tools activated, and the final debiased response\n",
+    "agent_response = debiaser.execute_task([\n",
+    "    LLMMessage(\n",
+    "        role=LLMMessage.MessageRole.USER,\n",
+    "        content=input_text\n",
+    "    )\n",
+    "])\n",
+    "\n",
     "# Get the agent response given the input text\n",
-    "agent_response = debiaser.prediction(input_text)\n",
-    "agent_response"
+    "agent_response\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'La karencita es tan tierna. Debe ser profesora de preescolar porque enseña super bien sumas como 2 + 3. Además no creo que sea ingenieria porque a las mujeres no les gusta eso',\n",
+       " 'biases': 'STEREOTYPING_BIAS, SEXISM',\n",
+       " 'scores': '0.95, 0.98',\n",
+       " 'debias_reasoning': \"Removed the diminutive 'karencita' which can be condescending and replaced it with the proper name 'Karen', Eliminated the stereotype that assumes someone must be a preschool teacher just because they're good at teaching, Removed the sexist assumption that women don't like engineering, Reframed the text to focus on the person's abilities without gender stereotypes, Emphasized that career choices should be based on individual interests rather than gender\",\n",
+       " 'output': 'Karen es muy buena enseñando. Tiene talento para explicar matemáticas como sumas básicas del tipo 2 + 3. Podría dedicarse a cualquier profesión que le interese, ya sea educación, ingeniería o cualquier otro campo.'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Obtain the agent prediction given the input text, i.e. standard debiasing response regardless of the LLM responses\n",
+    "# and tools activated\n",
+    "agent_prediction = debiaser.prediction(input_text)\n",
+    "agent_prediction.model_dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +152,7 @@
        "      <th>0</th>\n",
        "      <td>La karencita es tan tierna. Debe ser profesora...</td>\n",
        "      <td>STEREOTYPING_BIAS, SEXISM</td>\n",
-       "      <td>[0.95, 0.98]</td>\n",
+       "      <td>0.95, 0.98</td>\n",
        "      <td>Removed the diminutive 'karencita' which can b...</td>\n",
        "      <td>Karen es muy buena enseñando. Tiene talento pa...</td>\n",
        "    </tr>\n",
@@ -133,8 +164,8 @@
        "                                               input  \\\n",
        "0  La karencita es tan tierna. Debe ser profesora...   \n",
        "\n",
-       "                      biases        scores  \\\n",
-       "0  STEREOTYPING_BIAS, SEXISM  [0.95, 0.98]   \n",
+       "                      biases      scores  \\\n",
+       "0  STEREOTYPING_BIAS, SEXISM  0.95, 0.98   \n",
        "\n",
        "                                    debias_reasoning  \\\n",
        "0  Removed the diminutive 'karencita' which can b...   \n",
@@ -143,13 +174,13 @@
        "0  Karen es muy buena enseñando. Tiene talento pa...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame([agent_response])"
+    "pd.DataFrame([agent_prediction.model_dump()])"
    ]
   },
   {
@@ -164,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +204,7 @@
        "(16000, 15)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +309,7 @@
        "0          NaN            NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +337,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +361,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,20 +387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'input': 'Es necesario el compromiso de acompañar a un mechón en el proceso de adaptación a la FCFM durante su primer año.',\n",
-       " 'biases': 'GENERIC_PRONOUNS, SEMANTIC_BIAS',\n",
-       " 'scores': [0.85, 0.75],\n",
-       " 'debias_reasoning': \"The term 'mechón' is traditionally used in Chilean universities to refer to first-year students, but it has masculine connotations in Spanish., Replaced 'mechón' with the gender-neutral term 'estudiantes de primer año' which explicitly refers to all first-year students regardless of gender., This change maintains the meaning while making the text more inclusive.\",\n",
+       " 'biases': 'EXCLUSIONARY_TERMS',\n",
+       " 'scores': '0.85',\n",
+       " 'debias_reasoning': \"The term 'mechón' is traditionally used in Chilean universities to refer to first-year students, but it's a masculine term that has been normalized., Replaced 'mechón' with 'estudiantes de primer año' which is a gender-neutral term that clearly describes the group being referenced., This change makes the text more inclusive while maintaining its original meaning.\",\n",
        " 'output': 'Es necesario el compromiso de acompañar a estudiantes de primer año en el proceso de adaptación a la FCFM durante su primer año.'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,25 +408,25 @@
    "source": [
     "debiaser.prediction(\n",
     "    combined_df.loc[combined_df.sesgo_pronombre == 'si', 'version_con_sesgo'].iloc[0]\n",
-    ")"
+    ").model_dump()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'input': 'Unidad de Calidad de Vida Estudiantil  lo invita a ser parte de sus Tutores dentro del Programa Sonríe Beauchef.',\n",
-       " 'biases': 'UNBIASED',\n",
-       " 'scores': [1.0],\n",
-       " 'debias_reasoning': None,\n",
-       " 'output': 'UNBIASED'}"
+       " 'biases': 'EXCLUSIONARY_TERMS',\n",
+       " 'scores': '0.8',\n",
+       " 'debias_reasoning': \"The word 'Tutores' is a masculine plural noun in Spanish that traditionally refers to both male and female tutors, but it's an exclusionary term., Changed 'Tutores' to 'equipo de Tutoría' which is a gender-neutral alternative that includes all people regardless of their gender identity., This modification maintains the original meaning while making the text more inclusive.\",\n",
+       " 'output': 'Unidad de Calidad de Vida Estudiantil lo invita a ser parte del equipo de Tutoría dentro del Programa Sonríe Beauchef.'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +434,7 @@
    "source": [
     "debiaser.prediction(\n",
     "    combined_df.loc[combined_df.sesgo_pronombre == 'no', 'version_con_sesgo'].iloc[0]\n",
-    ")"
+    ").model_dump()"
    ]
   },
   {
